# Dummy_telementry

./: .gitignore  Makefile  README.md  README2.md  pyproject.toml  pytest.ini  quick_test.py  setup.py
ex1/: complete_architecture_plan.md  demo_script.py  generator.py  main.py  my_generator.py  test_suite_basic.py  test_suite_enhanced.py  usage_examples.py
telemetry_generator/: __init__.py  binary_packer.py  binary_reader.py  binary_schema.py  cli.py  data_generators.py  fault_injector.py  file_writer.py  formatters.py  generator.py  gpu_accelerator.py  gpu_batch_generator.py  load_profiles.py  rate_control.py  rolling_writer.py  test_binary_schema.py  types_and_enums.py  utilities.py
telemetry_generator/formats/: leb128.py
test/: SETUP_INSTRUCTIONS.md  conftest.py  pytest.ini  run_tests.py  test.sh  test_binary_record_packer.py  test_binary_schema.py  test_binary_schema_processor.py  test_cli.py  test_field_data_generator.py  test_telemetry_generator.py
tests/: conftest.py  test_cli.py  test_generator.py  test_integration.py  test_leb128.py  test_load_profiles.py  test_performance.py  test_rate_control.py  test_rolling_writer.py
